[gd_scene load_steps=21 format=2]

[ext_resource path="res://Images/Cursor/XP/xp_arrow.png" type="Texture" id=1]
[ext_resource path="res://Shaders/CRT.tres" type="Material" id=2]
[ext_resource path="res://Scripts/Disclamer/CRT Open.gd" type="Script" id=3]
[ext_resource path="res://SoundEffects/Static/Static No Heartbeat.wav" type="AudioStream" id=4]
[ext_resource path="res://Shaders/CRTClose.tres" type="Material" id=5]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/Disclamer/Fadeout.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Disclamer/AudioManager-Disclamer.gd" type="Script" id=9]
[ext_resource path="res://Fonts/m6x11.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Scripts/Disclamer/Mouse-Disclamer.gd" type="Script" id=11]
[ext_resource path="res://SoundEffects/Foley/Mouse/Mouse - Released.wav" type="AudioStream" id=12]
[ext_resource path="res://SoundEffects/Foley/Mouse/Mouse - Pressed.wav" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.952941, 0.952941, 0.952941, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 32
extra_spacing_top = -3
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.658824, 0.658824, 0.658824, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.745098, 0.745098, 0.745098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id=7]
resource_name = "Disclamer-FadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[node name="Disclamer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background Color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="DisclamerText" type="Control" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="DisclamerText"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="DisclamerText/CenterContainer"]
margin_left = 155.0
margin_top = 55.0
margin_right = 805.0
margin_bottom = 485.0
custom_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="DisclamerText/CenterContainer/VBoxContainer"]
margin_right = 650.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="DisclamerText/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 195.0
margin_right = 455.0
margin_bottom = 56.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "DISCLAMER"

[node name="CenterContainer2" type="CenterContainer" parent="DisclamerText/CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 650.0
margin_bottom = 385.0

[node name="RichTextLabel" type="RichTextLabel" parent="DisclamerText/CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 650.0
margin_bottom = 319.0
rect_min_size = Vector2( 650, 0 )
size_flags_vertical = 0
custom_colors/default_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]After clicking '[color=yellow]Continue[/color]', the game will read a restricted number of your files contained inside the '[color=yellow]Users[/color]' directory for the purposes of gameplay.

The game will not modify or create any files or folders once started, even inside its own directories. Along with this, these files are not shared with anyone as the game lacks an internet connection.

[color=#ca1818]If you do not agree to this, please stop here.[/color][/center]"
text = "After clicking 'Continue', the game will read a restricted number of your files contained inside the 'Users' directory for the purposes of gameplay.

The game will not modify or create any files or folders once started, even inside its own directories. Along with this, these files are not shared with anyone as the game lacks an internet connection.

If you do not agree to this, please stop here."
fit_content_height = true
deselect_on_focus_loss_enabled = false

[node name="CenterContainer3" type="CenterContainer" parent="DisclamerText/CenterContainer/VBoxContainer"]
margin_top = 395.0
margin_right = 650.0
margin_bottom = 430.0

[node name="HBoxContainer" type="HBoxContainer" parent="DisclamerText/CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 210.0
margin_right = 440.0
margin_bottom = 35.0
custom_constants/separation = 50

[node name="Quit" type="Button" parent="DisclamerText/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 70.0
margin_bottom = 35.0
rect_min_size = Vector2( 70, 35 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Quit"

[node name="Continue" type="Button" parent="DisclamerText/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 120.0
margin_right = 230.0
margin_bottom = 35.0
rect_min_size = Vector2( 110, 30 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Continue"

[node name="Mouse" type="Node2D" parent="." groups=["Mouse"]]
pause_mode = 2
script = ExtResource( 11 )

[node name="MouseSprite" type="Position2D" parent="Mouse"]

[node name="Sprite" type="Sprite" parent="Mouse/MouseSprite"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
centered = false

[node name="CRT Filter" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Effect" type="ColorRect" parent="CRT Filter"]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="CRT Filter"]
copy_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CRT Close" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Effect" type="ColorRect" parent="CRT Close"]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="FadeOutTransition" type="ColorRect" parent="."]
self_modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )
next_scene_path = "res://Scenes/MainScene.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeOutTransition"]
anims/Disclamer-FadeOut = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="AudioManager" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Static" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 4 )
volume_db = -5.0
bus = "Static"

[node name="MousePress" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 14 )

[node name="MouseRelease" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 12 )

[connection signal="pressed" from="DisclamerText/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/Quit" to="FadeOutTransition" method="_on_Quit_pressed"]
[connection signal="pressed" from="DisclamerText/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer/Continue" to="FadeOutTransition" method="_on_Continue_pressed"]
